# medical-coding-reproducibility

./: .gitattributes  .gitignore  README.md  calculate_accuracy.py  main.py  pyproject.toml
configs/metrics/: defaults.yaml
configs/model/: plm_icd.yaml
configs/text_transform/: huggingface.yaml
files/data/mimiciv_icd10/: mimiciv_icd10_split_std.feather
files/data/mimiciv_std/: std-notes.json
prepare_data/: generate_mimiciv_splits.py  prepare_mimiciv.py
reports/: utils.py
reports/plots/: code_freq_f1.py
reports/plots/mimiciv_icd10/: num_codes_per_case_f1.py  num_words_f1.py
src/: metrics.py
src/data/: data_pipeline.py
src/models/: laat.py  mullenbach_models.py  multi_res_cnn.py
src/trainer/: callbacks.py  trainer.py
